--- a/html/Layouts/html/headHtml.html
+++ b/html/Layouts/html/headHtml.html
@@ -10,4 +10,5 @@ ob_clean();
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" />
     <style type="text/css">pre { background: #444; color:#fff; border-style: none; }</style>
     <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js?"></script><![endif]-->
+    <link rel="stylesheet" type="text/css" href="../Layouts/css/blog.css">
 </head>
