--- a/html/Layouts/css/blog.css
+++ b/html/Layouts/css/blog.css
@@ -37,6 +37,8 @@
 }
 
 .img-responsive{
-    max-width: 25%;
-    max-height: 25%;
+    max-width: 80%;
+    max-height: 60%;
+    min-width: 40%;
+    min-height: 40%;
 }
