--- a/html/Layouts/html/headHtml.html
+++ b/html/Layouts/html/headHtml.html
@@ -1,6 +1,7 @@
 <?php
 ob_clean();
 ?>
+<html lang="en">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta charset="utf-8" />
